Paste Deployment News
=====================

Version 0.3 (svn trunk)
-----------------------

* Allow variable setting like::

    get local_var = global_var_name

  To bring in global variables to the local scope.

Version 0.2
-----------

Released 26 August 2004

* Added a ``filter-with`` setting to applications.

* Removed the ``1`` from all the protocol names (e.g.,
  ``paste.app_factory1`` is not ``paste.app_factory``).

* Added ``filter-app:`` and ``pipeline:`` sections.  `Docs
  <paste-deploy.html#filter-composition>`__.

* Added ``paste.filter_app_factory1`` (`doc
  <paste-deploy.html#paste-filter-app-factory1>`__) and
  ``paste.server_runner1`` (`doc
  <paste-deploy.html#paste-server-runner1>`__) protocols.

* Added ``paste.deploy.converters`` module for handling the
  string values that are common with this system.

Version 0.1
-----------

Released 22 August 2004

Initial version released.  It's all new.